@@ -1,4 +1,5 @@
-(ENHANCE) Ported the 'new project' dialog to use Ttl widgets
+(ENHANCE) Ported the 'delete project' question dialog to Ttk
+(ENHANCE) Ported the 'new project' dialog to use Ttk widgets
 (ENHANCE) Update the project management window to use Ttk widgets
 (INTERNAL) Add tile extension for Ttk widgets support
 (INTERNAL) Update tkTable to version 2.10
